--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "vercel": "^33.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
